# oci-oke-tf

./: .bumpversion.cfg  .gitignore  .python-version  datasources.tf  network.tf  oke.tf  outputs.tf  provider.tf  pyproject.toml  requirements.txt  variables.tf
